<resources>
    <string name="app_name">Rondon</string>

    <string name="clinica_vet">Clínica Veterinaria</string>
    <string name="rondon">Rondón</string>
    <string name="Login">Login</string>

    <string name="clinica_vet_rondon">Clínica Veterinaria Rondón</string>

    <string name="email_or_user">Usuario</string>
    <string name="password">Password</string>

    <string name="new_user_01">¿No tienes cuenta?</string>
    <string name="new_user_02"><b>Inscribete Aqui</b></string>
    <string name="new_user_03">¿Ya tienes cuenta?</string>
    <string name="new_user_04"><b>Ingresa Aqui</b></string>


    <string name="forget_password">Forget Password?</string>
    <string name="forget_pasword">#616161</string>
    <string name="or">OR</string>
    <string name="checkin">Check In</string>
    <string name="registrar">Registrar</string>
    <string name="todo">TODO</string>
    <string name="clinica">Clínica</string>
    <string name="veterinaria">Veterinaria</string>

    <string name="registrar_usuario">Registro de Usuario</string>

    <!-- TEXTO MENÚ -->
    <string name="my_acount">Mi Cuenta</string>


    <string name="notify">Notificaciónes</string>
    <string name="menuHome">Menú Principal</string>

    <string name="quienessomos">Quiénes Somos</string>
    <string name="especialidades">Especialidades</string>
    <string name="servicios">Servicios</string>
    <string name="contactenos">Contáctenes</string>
    <string name="username">Email</string>
    <string name="verified">Verificado</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ubicanos">Ubícanos</string>
    <string name="whatsapp">Escribenos a nuestro WhatsApp</string>

    <string name="producto_CRUD">Mantenimiento de Producto</string>
    <string name="perfil_CRUD">Mantenimiento de Usuario</string>
    <string name="mascota_CRUD">Mantenimiento de Mascota</string>

    <string name="cita">Citas</string>
    <string name="admin_setting">Administrador</string>
    <string name="seguridad">Seguridad</string>
    <string name="carritocompra">Carrito de Compra</string>
    <string name="perfil_usuario">Perfil del Usuario</string>

    <string name="imagen">es una imagen</string>
    <string name="nombre">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="dni">Nº Documento</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="user">Usuario</string>
    <string name="email">Email</string>

    <string name="consultas_especialidades">Consulta médica veterinaria con los mejores especialistas siempre dispuestos a dar todo por la salud y cuidado de tu mascota.</string>
    <string name="peluqueria_especialidades">Cuidamos el 100% del aspecto y la salud de tu engreído, siempre utilizando los productos de la más alta calidad del mercado.</string>
    <string name="internamientos_especialidades">Contamos con una área exclusiva para internamientos de última generación y el personal mejor calificado y dedicado las 24 horas al cuidado tu mascota.</string>
    <string name="petshop_especialidades">Contamos con la mejor y más variada tienda de artículos para mascotas en todo el país.</string>
    <string name="cirugia_especialidades">Atendemos todas las cirugía veterinaria en las más amplias y modernas instalaciones y con los cirujanos más experimentados.</string>
    <string name="laboratorio_especialidades">Disponemos de los mejores analistas y el más moderno laboratorio de muestras.</string>

    <string name="consultas_especialidad">Consultas de especialidad</string>
    <string name="consultas_medicas">Consultas Médicas</string>
    <string name="peluquería_mascotas">Peluquería para mascotas</string>
    <string name="internamientos">Internamientos de última generación</string>
    <string name="pet_Shop">Pet Shop</string>
    <string name="cirugias">Cirugías</string>
    <string name="laboratorio">Laboratorio</string>
    <string name="olvidar_pass">¿Olvidaste tu Contraseña?</string>
    <string name="num_doc">N° Documento</string>
    <string name="registrar_cuenta">Crear Cuenta</string>
    <string name="reset">Recuperar</string>
    <string name="ingrese_mail">Ingrese su Correo</string>
    <string name="perfil">Perfil</string>
    <string name="mi_Perfil">Mi Perfil</string>
    <string name="admin">Administrador</string>

    <string name="quienes_Somos_01">Somos la clínica veterinaria número 1 de todo el Perú, tenemos más de 50 años dedicados al cuidado y atención de las mascotas. \n\nOfreciendo servicios de peluquería para mascotas, consultas de especialidad, pet shop y emergencias las 24 horas.\n\nDisponemos de las mejores instalaciones y el personal mejor capacitado para garantizar el bienestar de tu mascota.\n\nLa tranquilidad y la salud de tu engreído estarán en las mejores manos, porque tú y tu mascota pasarán a formar parte de nuestra gran familia.</string>
    <string name="cita_registro">Registro de Citas</string>
    <string name="mascota">Mascota</string>
    <string name="citas">Citas</string>
    <string name="mi_mascota">Mi Mascota</string>

    <string name="nuestras_especialidad">Los Mejores Especialistas están al servicio de tu Mascota</string>
    <string name="nuestras_especialidad_01">Los Mejores Especialistas</string>
    <string name="nuestras_especialidad_02">Están al Servicio</string>
    <string name="nuestras_especialidad_03">de tu Mascota</string>

    <string name="oncologia">Oncología</string>
    <string name="oncologia_dr">Dr. Mario Verano</string>

    <string name="fisioterapia_dr">Dra. Luccia Carpio</string>
    <string name="fisioterapia">Fisioterapia</string>

    <string name="traumatologia">Traumatología</string>
    <string name="traumatologia_dr">Luis Pareja</string>

    <string name="neurologia">Neurología</string>
    <string name="neurologia_dr">Dr. Luis Ramos</string>

    <string name="odontologia">Odontología</string>
    <string name="odontologia_dr">Dr. Jorge Hun</string>

    <string name="oftalmologia">Oftalmología</string>
    <string name="oftalmologia_dr">Dra. Roxana Padilla</string>

    <string name="felinos">Felinos</string>
    <string name="felinos_dr">Dra. Lizette Ampuero</string>

    <string name="cardiologia">Cardiología</string>
    <string name="cardiologia_dr">Dr. Juan Diego Asencio</string>

    <string name="nutricion">Nutrición</string>
    <string name="nutricion_dr">Dra. Marisol Sevilla</string>
    <string name="nuestras_servicios">Nuestros Servicios</string>
    <string name="repeat_password">Repetir Password</string>
    <string name="cont_ctanos">Contáctanos</string>
    <string name="puedes_escribirnos_a_nuestro_whatsapp_con_alguna_inquietud_que_tengas_o_para_hacernos_llegar_tus_sugerencias">Puedes escribirnos a nuestro Whatsapp con alguna inquietud que tengas o para hacernos llegar tus sugerencias.</string>
    <string name="escribenos_a_nuestro_whatsapp">Escribenos a nuestro whatsapp</string>
    <string name="si_nos_visitas_encontraras">Si nos visitas encontraras</string>
    <string name="todo1">TODO</string>
    <string name="Mascota">Mascota</string>
    <string name="Nombre">Nombre</string>
    <string name="Raza">Raza</string>
    <string name="Edad">Edad</string>
    <string name="Dueño">Dueño</string>
    <string name="Registrar_Mascota">Registrar Mascota</string>
    <string name="Color">Color</string>
    <string name="Registrar">Registrar</string>
    <string name="title_activity_prueba">prueba</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_registrar_mascota">RegistrarMascotaActivity</string>
    <string name="nombre_de_la_mascota">Nombre de la mascota</string>
    <string name="fecha">Fecha</string>
    <string name="descripcion">Descripcion</string>
    <string name="texview">TexView</string>
    <string name="editar">Editar</string>


</resources>