<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="5dp">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/editar"
        android:textColor="@color/white_text_Color"
        app:shapeAppearanceOverlay="@style/Button5"
        app:backgroundTint="@color/blue_text_Color"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mascota"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:text="@string/Edad"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:text="@string/Color"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:text="@string/Dueño"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_mascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/texview"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_mascota"
        android:layout_centerHorizontal="true"
        android:text="@string/texview"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_edad"
        android:layout_centerHorizontal="true"
        android:text="@string/texview"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_dueno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_color"
        android:layout_centerHorizontal="true"
        android:text="@string/texview"
        android:textColor="@color/black" />

</RelativeLayout>