<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mascota"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dueño"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/textView1"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/textView2"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/textView3"/>

    <TextView
        android:id="@+id/tv_mascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texview"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_dueno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texview"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_below="@id/tv_mascota"
        />
    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texview"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_below="@id/tv_dueno"
        />
    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texview"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_below="@id/tv_fecha"
        />
</RelativeLayout>