<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistrarCitas"
    android:layout_gravity="center"
    android:background="@drawable/fondo_02">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="19dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/citas"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etmascota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/nombre_de_la_mascota"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/etedueno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Dueño"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/etfecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/fecha"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <EditText
                    android:id="@+id/etdescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/descripcion"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Registrar" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>