<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistrarMascotaActivity"
    android:layout_gravity="center"
    android:background="@drawable/fondo_02">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="19dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mascota"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etedad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Edad"
            android:inputType="number"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/etcolor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/Color"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etdueño"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Dueño"
            android:inputType="text"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrar" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/Color"
        app:srcCompat="@drawable/ic_baseline_add_box_24"
        tools:ignore="ImageContrastCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>